--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@types/react-calendar": "^4.1.0",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "mobx": "^6.13.1",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
