Add Identity and JWT config

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=reactivities.db "
-  }
+  },
+  "TokenKey": "YQ7P*jG@^/veT:(5>4nA!,[-Xw]$mn\"yV^`/;TLJC8DkD`+B.;)9}tHb\"=WS?zudU"
 }
