--- a/client-app/package.json
+++ b/client-app/package.json
@@ -20,6 +20,7 @@
     "react-calendar": "^5.0.0",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.10",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
     "semantic-ui-css": "^2.5.0",
