--- a/client-app/package.json
+++ b/client-app/package.json
@@ -18,6 +18,7 @@
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-cropper": "^2.3.3",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.10",
