--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@types/react-calendar": "^4.1.0",
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
