--- a/client-app/package.json
+++ b/client-app/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.10",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
     "semantic-ui-css": "^2.5.0",
@@ -34,6 +35,7 @@
     "@eslint/js": "^9.8.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-infinite-scroller": "^1.2.5",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.8.0",
