Configure app to use Sql Server

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=reactivities.db "
+    "DefaultConnection": "Server=localhost,1433;Database=Reactivities;User Id=SA;Password=Password@1;TrustServerCertificate=True"
   },
   "TokenKey": "YQ7P*jG@^/veT:(5>4nA!,[-Xw]$mn\"yV^`/;TLJC8DkD`+B.;)9}tHb\"=WS?zudU"
 }
